<resources>
    <string name="app_name">РТ Мотивация</string>
    <string name="error_unknown">Произошла непридвиденная ошибка</string>
    <string name="title_internet_not_worked">Отсутствует подключение к интернету</string>
    <string name="msg_internet_not_worked">Отсутствует подключение к интернету, проверьте настройки сети.</string>
    <string name="ok">OK</string>
    <string name="offline_mode">Отсутствует подключение к сети, приложение будет работать в оффлайн режиме</string>
    <string name="about_title">О программе</string>
    <string name="main_title">Главная</string>
    <string name="settings_title">Настройки</string>
    <string name="e_mail">E-mail</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="connection">Соединение…</string>
    <string name="admin_mail_ru">admin@mail.ru</string>
    <string name="refill_title">Пополнение</string>
    <string name="my_quests_title">Мои квесты</string>
    <string name="my_achievements_title">Награды</string>
    <string name="level_format_header_view" formatted="false">%s • %d-й уровень</string>
    <string name="user_level_count_text_view" formatted="false">%s из %s XP</string>
    <string name="balance" formatted="false">%s ฿</string>
    <string name="xpa" formatted="false">%s XP</string>
    <string name="balance_xpa" formatted="false">%s ฿  %s XP</string>
    <string name="add">Добавить</string>
    <string name="open_title">Open</string>
    <string name="close_title">Close</string>
    <string name="complete_text">Отлично! Задание выполнено</string>
    <string name="complete_text_desc">Вы будете вознаграждены сразу после проверки</string>
    <string name="send">Отправить</string>
    <string name="login_title">Вход</string>
    <string name="incorrect_login_or_password">Неверный логин или пароль</string>
    <string name="logout">Выйти</string>
    <string name="fill_fileds_msg">Заполните поля!</string>
    <string name="anonim">Аноним</string>
    <string name="indefined">Неопределен</string>
    <string name="my_profile">Мой профиль</string>
    <string name="my_department">Моя команда</string>
    <string name="join_task">Участвовать</string>
    <string name="add_sell">Добавить продажу</string>
    <string name="alert_attach_info">Внимание! Для выполнения этого задания необходимо прикреплять фотографии.</string>
    <string name="select_pic">Выберите изображение</string>
    <string name="request_has_been_added">Заявка успешно добавлена!</string>
    <string name="quest_str">Квест</string>
    <string name="count">Количество</string>
    <string name="attach_doc_msg">Прикрепите хотя бы одну фотографию</string>
</resources>
