<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/nav_group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_main"
            android:title="@string/my_profile"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_department"
            android:title="@string/my_department"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_about"
            android:title="@string/about_title"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_logout"
            android:title="@string/logout"
            app:showAsAction="never" />

    </group>
</menu>